# VINS-Mono

comms/: CMakeLists.txt  package.xml
comms/src/: receiver_node.cpp  server_node.cpp  transmission_node.cpp
feature_tracker/src/: feature_tracker_node.cpp
pose_graph/: CMakeLists.txt
pose_graph/include/pose_graph/: keyframe.cpp  transmission.cpp
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph_node.cpp  transmission.cpp
vins_estimator/launch/: euroc.launch
vins_estimator/src/: estimator_node.cpp
